new line added by local branch

--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@ To add files: git add .
 To enter a name of repo: $ git commit -m 'Name of commit'
 
 All are clear
+
+This line added by local branch.
